--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   justify-content: center;
@@ -6,36 +12,43 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 50%;
+  /* max-width: 50%; */
 }
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+img {
+  height: 300px;
+  width: 300px;
+  margin: 1.5rem;
 }
+
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
+
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: #025677;
   color: #fff;
 }
+
 .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 30px 50px;
 }
+
 #search-form {
-  width: 30%;
-  margin: 0 auto;
-  position: relative;
+  margin: 2rem;
 }
+
 #search-form input {
-  width: 100%;
+  height: 4rem;
   font-size: 1.5rem;
   padding: 10px 15px;
   border: 2px solid #ccc;
   border-radius: 2px;
 }
+
 #search-form button {
   position: absolute;
   top: 0;
@@ -50,17 +63,18 @@ body {
   cursor: pointer;
   color: #333;
 }
+
 .info {
   margin-top: 0.5rem;
   text-align: center;
   font-size: 0.75rem;
 }
 
-i.fas.microphone{ 
-  background-color:red;
+i.fas.microphone {
+  background-color: red;
   color: red;
 }
-
+/* 
 @media (max-width: 1200px) {
   #search-form { width: 50%; }
 }
@@ -68,4 +82,4 @@ i.fas.microphone{
   .container { padding: 30px 35px; }
   #search-form { width: 100%; }
   .info { font-size: 0.5rem; }
-}
+} */
