--- a/style.css
+++ b/style.css
@@ -19,9 +19,14 @@ body {
 }
 
 img {
-  height: 300px;
-  width: 300px;
+  height: 400px;
+  width: 400px;
   margin: 1.5rem;
+}
+
+audio {
+  width: 400px;
+  
 }
 
 #btn__start{
