--- a/style.css
+++ b/style.css
@@ -4,17 +4,23 @@
   box-sizing: border-box;
 }
 
+html{
+  height: 100%;
+}
+
 body {
   display: flex;
   justify-content: center;
   background-color: #003f5c;
   color: white;
+  height: 100%;
 }
+
 #app {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20vh auto;
+  margin: 6rem auto;
   /* max-width: 50%; */
 }
 
@@ -40,6 +46,28 @@ audio {
 .start__h1 {
   font-size: 3.5rem;
 }
+
+/* .fa-microphone {
+  font-size: 1.5rem;
+  color: black;
+  height: 1.5rem;
+} */
+
+.fas {
+  /* background-color: white; */
+  height: 20px;
+  width: 2rem;
+}
+
+.button{
+  background-color: #58508d;
+  color: white;
+  font-size: 1.5rem;
+  width: 20rem;
+  height: 5rem;
+  border-radius: 45px;
+}
+
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
 
 /* body {
@@ -89,10 +117,10 @@ audio {
   font-size: 0.75rem;
 }
 
-i.fas.microphone {
+/* i.fas.microphone {
   background-color: red;
   color: red;
-}
+} */
 /* 
 @media (max-width: 1200px) {
   #search-form { width: 50%; }
