--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html{
+html {
   height: 100%;
 }
 
@@ -18,10 +20,9 @@ body {
 
 #app {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  margin: 6rem auto;
-  /* max-width: 50%; */
 }
 
 img {
@@ -44,14 +45,16 @@ audio {
 }
 
 .start__h1 {
-  font-size: 3.5rem;
+  font-size: 3rem;
+  padding-bottom: 1rem;
+  margin-left: 2rem;
 }
 
 .fa-microphone {
   /* font-size: 1.5rem;
   color: black;
   height: 1.5rem; */
- height: 20px;
+  height: 20px;
   width: 2rem;
 }
 
@@ -60,7 +63,7 @@ audio {
   width: 2rem;
 }
 
-.button{
+.button {
   background-color: #58508d;
   color: white;
   font-size: 1.5rem;
@@ -68,14 +71,6 @@ audio {
   height: 5rem;
   border-radius: 45px;
 }
-
-@import url("https://fonts.googleapis.com/css?family=Montserrat");
-
-/* body {
-  font-family: "Montserrat", sans-serif;
-  background-color: #025677;
-  color: #fff;
-} */
 
 .container {
   display: flex;
@@ -89,7 +84,6 @@ audio {
   display: flex;
   flex-direction: column;
   margin: 2rem;
-
 }
 
 #search-form input {
@@ -120,14 +114,3 @@ audio {
   text-align: center;
   font-size: 0.75rem;
 }
-
-
-/* 
-@media (max-width: 1200px) {
-  #search-form { width: 50%; }
-}
-@media (max-width: 768px) {
-  .container { padding: 30px 35px; }
-  #search-form { width: 100%; }
-  .info { font-size: 0.5rem; }
-} */
